[package]
name = "mc_whitelist_bot"
version = "1.0.0"
authors = ["Joseph Zurowski <Kexerval@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.12"
reqwest = "0.9"
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "4e6a7dd" }
serenity = "0.6"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
rcon = "0.1"
tokio = "0.1"
url = "1.7.2"

[dependencies.mysql]
version = "16"
features = ["ssl"]
