[package]
name = "mc_whitelist_bot"
version = "1.2.0"
authors = ["Joseph Zurowski <Kexerval@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
hyper = "0.12"
lazy_static = "1.4.0"
reqwest = "0.9"
serenity = "0.7"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
rcon = "0.1"
retry = "0.5"
tokio = "0.1"
url = "1.7.2"

[dependencies.mysql]
version = "16"
features = ["ssl"]

[dependencies.diesel]
version = "1"
features = ["mysql", "r2d2", "numeric"]
